--- a/code/dev/parts/profile/edit-company.html
+++ b/code/dev/parts/profile/edit-company.html
@@ -154,7 +154,7 @@
               </div>
             </div>
             <!-- -->
-            <div class="form-group" ng-if="model.billing_id && (userService.isReseller() || userService.isRevadmin())">{{billing_plans[0]}}
+            <div class="form-group" ng-if="model.billing_id && (userService.isReseller() || userService.isRevadmin())">
               <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Billing plan">Billing Plan</label>
               <div class="col-sm-10">
                 <ui-select ng-model="model.billing_plan" theme="select2" ng-disabled="_loading" on-select="" style="min-width: 300px;">
@@ -270,7 +270,7 @@
                 </button>
                 <!-- TODO: Need to disable "Edit Billing Profile" button if the billing profile is not active
                                 // TODO: in Chargify  -->
-                <a ng-if="model.billing_id" ng-if="!!model.billing_portal_link.url" href="{{model.billing_portal_link.url}}" class="btn btn-primary" target="_blank" ng-disabled="_loading || _disabled">
+                <a ng-if="model.billing_id" ng-if="!!model.billing_portal_link.url && !!model.subscription_id" href="{{model.billing_portal_link.url}}" class="btn btn-primary" target="_blank" ng-disabled="_loading || _disabled">
                   <i class="glyphicon glyphicon-lock"></i> Update Payment Profile</a>
                 <!-- Create Billing Profile -->
                 <a href="" class="btn btn-primary" ng-if="!model.billing_id && (userService.isRevadmin() || userService.isReseller())" ng-click="createBillingProfile(model)">
