--- a/code/dev/parts/signup/signup.html
+++ b/code/dev/parts/signup/signup.html
@@ -1,295 +1,23 @@
 <div class="container">
-<div class="row">
+  <div class="row">
     <div class="col-sm-12">
-
     </div>
-</div>
-
-<div class="row">
+  </div>
+  <div class="row">
     <div class="col-md-12">
-        <div class="panel panel-default text-center" >
-            <div class="panel-body">
-                <div class="row">
-                    <div class="text-center col-md-4">
-                        <img class="img-responsive" src="images/logo_color.png" alt="Logo"/>
-                    </div>
-                    <div class="col-md-4 text-center "><h1 class="signup">Sign Up</h1></div>
-                </div>
-
+      <div class="panel panel-default text-center">
+        <div class="panel-body">
+          <div class="row">
+            <div class="text-center col-md-4">
+              <img class="img-responsive" src="images/logo_color.png" alt="Logo" />
             </div>
-            <div class="panel-heading">
-
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="pull-left">
-                            <h4 class="">
-                                Please fill in your contact info. Fields marked with asterisk (*) are required.
-                            </h4>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="panel-body">
-                <form class="form-horizontal" name="newUser" novalidate>
-                    <div class="form-group"
-                         ng-class="{ 'has-error': newUser.email.$invalid &&
-                                newUser.email.$dirty }">
-                        <label for="email"
-                               popover-append-to-body="{{true}}"
-                               class="col-sm-2 control-label"
-                               popover-trigger="mouseenter"
-                               popover="New user's email address - the address should be unique across the system">
-                            Email *</label>
-
-                        <div class="col-sm-10">
-                            <input type="email"
-                                   autofocus
-                                   class="form-control"
-                                   id="email"
-                                   name="email"
-                                   placeholder="Email"
-                                   ng-model="model.email"
-                                   required
-                                   ng-disabled="_loading">
-                        </div>
-                    </div>
-                    <div class="form-group"
-                         ng-class="{ 'has-error': newUser.password.$invalid &&
-                            newUser.password.$dirty }">
-                        <label for="password"
-                               popover-append-to-body="{{true}}"
-                               class="col-sm-2 control-label"
-                               popover-trigger="mouseenter"
-                               popover="At least six symbols"
-                        >Password *</label>
-
-                        <div class="col-sm-10">
-                            <input type="password"
-                                   class="form-control"
-                                   id="password"
-                                   name="password"
-                                   ng-model="model.password"
-                                   minlength="6"
-                                   required
-                                   ng-disabled="_loading"
-                                   >
-                        </div>
-                    </div>
-                    <div class="form-group"
-                         ng-class="{ 'has-error':
-                         (model.password != model.passwordConfirm ||
-                          newUser.passwordConfirm.$invalid) &&
-                            newUser.passwordConfirm.$dirty }">
-                        <label for="passwordConfirm"
-                               class="col-sm-2 control-label"
-                               popover-trigger="mouseenter"
-                        >Confirm Password *</label>
-
-                        <div class="col-sm-10">
-                            <input type="password"
-                                   class="form-control"
-                                   id="passwordConfirm"
-                                   name="passwordConfirm"
-                                   required
-                                   ng-model="model.passwordConfirm"
-                                   ng-disabled="_loading">
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="form-group">
-                        <label for="firstname"
-                               class="col-sm-2 control-label"
-                               popover-trigger="mouseenter"
-                               popover="First name">First Name *</label>
-
-                        <div class="col-sm-10">
-                            <input type="text"
-                                   class="form-control"
-                                   id="firstname"
-                                   placeholder="First Name"
-                                   ng-required
-                                   ng-model="model.firstname"
-                                   ng-disabled="_loading">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="lastName"
-                               class="col-sm-2 control-label"
-                               popover-trigger="mouseenter"
-                               popover="Last name">Last Name *</label>
-
-                        <div class="col-sm-10">
-                            <input type="text"
-                                   class="form-control"
-                                   id="lastName"
-                                   placeholder="Last Name"
-                                   ng-model="model.lastname"
-                                   ng-required
-                                   ng-disabled="_loading">
-                        </div>
-                    </div>
-                    <div class="form-group"
-                         ng-class="{ 'has-error': newUser.phoneNumber.$invalid &&
-                            newUser.phoneNumber.$dirty }">
-                        <label for="phoneNumber"
-                               class="col-sm-2 control-label"
-                               popover-trigger="mouseenter"
-                               popover="Contact phone number">Phone Number *</label>
-
-                        <div class="col-sm-10">
-                            <input type="text"
-                                   ng-pattern="phoneRegex"
-                                   class="form-control"
-                                   required
-                                   id="phoneNumber"
-                                   name="phoneNumber"
-                                   placeholder="Phone Number"
-                                   ng-model="model.phone_number"
-                                   ng-disabled="_loading">
-                        </div>
-                    </div>
-                    <div class="form-group"
-                         ng-class="{ 'has-error': newUser.companyName.$invalid &&
-                            newUser.companyName.$dirty }">
-                        <label for="companyName"
-                               class="col-sm-2 control-label"
-                               popover-trigger="mouseenter"
-                               popover="Should be unique across the system. Will be generated from your first and last name if left empty.">
-                            Company Name &nbsp;</label>
-
-                        <div class="col-sm-10">
-                            <input type="text"
-                                   class="form-control"
-                                   id="companyName"
-                                   name="companyName"
-                                   placeholder="Company Name"
-                                   maxlength="250"
-                                   ng-model="model.company_name"
-                                   ng-disabled="_loading">
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="form-group">
-                        <label for="address1"
-                               class="col-sm-2 control-label"
-                               popover-trigger="mouseenter"
-                               popover="Could be used as a billing address later.">Address *</label>
-
-                        <div class="col-sm-10">
-                            <input type="text"
-                                   class="form-control"
-                                   required
-                                   id="address1"
-                                   placeholder="Address"
-                                   ng-model="model.address1"
-                                   ng-disabled="_loading">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="address2"
-                               class="col-sm-2 control-label"
-                               popover-trigger="mouseenter"
-                               popover="Could be used as a billing address later.">Address (Line 2) &nbsp;</label>
-
-                        <div class="col-sm-10">
-                            <input type="text"
-                                   class="form-control"
-                                   id="address2"
-                                   placeholder="Address (Line 2)"
-                                   ng-model="model.address2"
-                                   ng-disabled="_loading">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="Country"
-                               class="col-sm-2 control-label"
-                               popover-trigger="mouseenter"
-                               popover="Could be used in a billing address later.">Country *</label>
-
-                        <div class="col-sm-10">
-                            <select type="text"
-                                   class="form-control"
-                                   id="Country"
-                                   placeholder="Country"
-                                   required
-                                   ng-model="model.country"
-                                   ng-options="key as value for (key , value) in countries"
-                                   ng-disabled="_loading">
-                                </select>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="state"
-                               class="col-sm-2 control-label"
-                               popover-trigger="mouseenter"
-                               popover="Could be used in a billing address later.">State *</label>
-
-                        <div class="col-sm-10">
-                            <input type="text"
-                                   class="form-control"
-                                   id="state"
-                                   required
-                                   placeholder="State"
-                                   ng-model="model.state"
-                                   ng-disabled="_loading">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="City"
-                               class="col-sm-2 control-label"
-                               popover-trigger="mouseenter"
-                               popover="Could be used in a billing address later.">City *</label>
-
-                        <div class="col-sm-10">
-                            <input type="text"
-                                   class="form-control"
-                                   id="City"
-                                   required
-                                   placeholder="City"
-                                   ng-model="model.city"
-                                   ng-disabled="_loading">
-                        </div>
-                    </div>
-                    <div class="form-group"
-                         ng-class="{ 'has-error': newUser.Zipcode.$invalid &&
-                            newUser.Zipcode.$dirty }">
-                        <label for="Zipcode"
-                               class="col-sm-2 control-label"
-                               popover-trigger="mouseenter"
-                               popover="Could be used in a billing address later.">Zip Code *</label>
-
-                        <div class="col-sm-10">
-                            <input type="text"
-                                   ng-pattern="zipRegex"
-                                   class="form-control"
-                                   id="Zipcode"
-                                   name="Zipcode"
-                                   maxlength="10"
-                                   required
-                                   placeholder="Zip Code"
-                                   ng-model="model.zipcode"
-                                   ng-disabled="_loading">
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="form-group">
-                        <div class="col-sm-offset-2 col-sm-10">
-                            <a ui-sref="^" class="btn btn-default">
-                                <i class="glyphicon glyphicon-remove"></i>&nbsp;
-                                Cancel
-                            </a>
-                            <button class="btn btn-success"
-                                    ng-disabled="_loading || newUser.$invalid"
-                                    ng-click="createUser(model)">
-                                Verify Email
-                            </button>
-                        </div>
-                    </div>
-
-                </form>
-            </div>
+            <div class="col-md-4 text-center ">
+              <h1 class="signup">Sign Up</h1></div>
+          </div>
         </div>
+      </div>
+      <div class="col-md-12" ui-view="form">
+      </div>
     </div>
-</div>
+  </div>
 </div>
