--- a/code/parts/signup/end.html
+++ b/code/parts/signup/end.html
@@ -1,35 +1,35 @@
 <div class="container" ui-view="page">
-    <div class="row">
-        <div class="col-sm-12">
-
-        </div>
+  <div class="row">
+    <div class="col-sm-12">
     </div>
-
-    <div class="row" ng-init="initLoginRedirect()">
-        <div class="col-md-12">
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="text-center col-md-4">
-                            <img class="img-responsive" src="images/logo_color.png" alt="Logo"/>
-                        </div>
-                        <div class="col-md-4 text-center "><h1 class="signup">Sign Up</h1></div>
-                    </div>
-
-                </div>
-                <div class="panel-heading">
-                    <h4>Signup process is complete</h4>
-                </div>
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <p class="lead">
-                                Thank you for completing the sign-up process. In a few seconds you will be redirected to our customer portal login page where you can log in using your freshly created username (email) and password.
-                            </p>
-                        </div>
-                    </div>
-                </div>
+  </div>
+  <div class="row" ng-init="initLoginRedirect()">
+    <div class="col-md-12">
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <div class="row">
+            <div class="text-center col-md-4">
+              <img class="img-responsive" src="images/logo_color.png" alt="Logo" />
             </div>
+            <div class="col-md-4 text-center ">
+              <h1 class="signup">Sign Up</h1></div>
+          </div>
         </div>
+        <div class="panel-heading">
+          <h4>Signup process is complete</h4>
+        </div>
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-md-12">
+              <!-- TODO: edit the text-->
+              <p class="lead">
+                Thank you for completing the sign-up process. When you get email with information about ready your account - you will be can login.
+                <!--   In a few seconds you will be redirected to our customer portal login page where you can log in using your freshly created username (email) and password. -->
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
